# pyper

./: LICENSE  README.md  pyproject.toml  setup.py
design_docs/: class.txt  interaction.txt
pyper/: __init__.py  _instructions.py  _pieces.py  _recipes.py
